@@ -1,3 +1,4 @@
+<a name="formatting-architecture"></a>
 
 <h2>A flexible formatting architecture</h2>
 
