@@ -1,3 +1,4 @@
+<a name="implementing-notation"></a>
 
 <h2>Music notation</h2>
 
