@@ -1,4 +1,6 @@
+<a name="software"></a>
 <h2>What's wrong with music notation software</h2>
+
 <p>
 Computers have made music printing accessible to the masses, but they
 tend to deliver mediocre typography.  Apparently, programmers have
