@@ -1,3 +1,10 @@
+2003-09-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* site/about/automated-engraving/big-page.py: collate pages,
+	revise links.
+
+	* GNUmakefile (scripts): add
+
 2003-09-21  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/download/index.html: Update Cygwin info.
